fix: card/stats alignment on category/categories

--- a/less/categories.less
+++ b/less/categories.less
@@ -63,7 +63,7 @@
 		.card {
 			border-left: 4px solid #ccc;
 			text-align: left;
-			margin-top: 2px;
+			margin-top: 10px;
 			overflow: hidden;
 			height: 53px;
 			font-size: 12px;
@@ -217,7 +217,7 @@
 .stats {
 	font-size: 20px;
 	text-align: center;
-	margin-top: 7px;
+	margin-top: 10px;
 	line-height: 22px;
 
 	small {
